# MIA-mvp

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/.cargo/: config.toml
backend/scripts/: heurist_x402_call.cjs
backend/src/: config.rs  error.rs  main.rs
backend/src/ai/: ask_mia.rs  ask_mia_tools.rs  cache.rs  consensus.rs  gateway.rs  mod.rs  prompts.rs  queue.rs  worker.rs
backend/src/api/: auto_investigation.rs  deep_research.rs  deployer.rs  health.rs  intelligence.rs  investigation.rs  investigation_fixtures.rs  investigation_missions.rs  investigation_ops.rs  investigation_runs.rs  investigation_watchlist.rs  ml.rs  mod.rs  narratives.rs  payments.rs  phase4.rs  router.rs  tokens.rs  verdict.rs  wallets.rs
backend/src/api/deep_research/: planner.rs  runs.rs  service.rs  tool_registry.rs  types.rs
backend/src/api/investigation/: llm.rs  sources.rs  types.rs
backend/src/api/phase4/: alpha.rs  deployers.rs  telegram.rs  types.rs  whales.rs
backend/src/config/: load.rs  types.rs
backend/src/db/: pool.rs
backend/src/indexer/: clustering.rs  deployer.rs  listener.rs  mod.rs  parser.rs  transaction_parser.rs
backend/src/phase4/: alpha.rs  bootstrap.rs  mod.rs  telegram.rs  whale.rs
backend/src/research/: auto_investigation.rs  decision_scorecard.rs  dexscreener.rs  dossier.rs  heurist.rs  heurist_x402.rs  launch_intelligence.rs  linking.rs  mod.rs  pattern_engine.rs
backend/src/risk/: mod.rs  scorer.rs  signals.rs
backend/src/ws/: handler.rs  hub.rs  mod.rs
frontend/: .dockerignore  (+6 more)
(+110 files in other folders)
