[package]
name = "mia-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mia-backend"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros", "ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

# Blockchain - alloy for BNB Chain (EVM compatible)
# Phase 2: providers + WebSocket transport for real-time block subscription
alloy = { version = "0.3", features = ["providers", "rpc-types", "provider-ws", "pubsub"] }

# Stream utilities for alloy block subscription
futures-util = "0.3"

# HTTP client for DGrid AI Gateway
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Async trait support
async-trait = "0.1"

# Redis
redis = { version = "0.26", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
base64 = "0.22"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
